Added the base for the actor module and its get/posts methods
